<resources>
    <string name="app_name">My Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="search">Search</string>
    <string name="name">Product name</string>
    <string name="price">Product price</string>
    <string name="quantity">Quantity</string>
    <string name="sum_price">Sum price</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>