<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingCart">

    <ImageView
        android:id="@+id/imgCart"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mycart" />

    <TextView
        android:id="@+id/tvCartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/my_cart"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCart"
        />

    <LinearLayout
        android:id="@+id/lnTitle"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/rvCart"
        app:layout_constraintTop_toBottomOf="@id/tvCartTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:gravity="right"

            android:layout_marginEnd="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sum_price"
            android:gravity="right"
            android:layout_marginEnd="25dp"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/lnTitle"
        app:layout_constraintBottom_toTopOf="@id/totalPrice"

        >

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/totalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/custom_border">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textStyle="bold"
            android:textSize="23dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@id/txtTotal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="30dp"
            />

        <Button
            android:text="@string/checkout"
            android:textSize="8dp"
            android:textColor="@color/black"
            android:id="@+id/btnCheckout"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:background="@drawable/custom_border"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5dp"
            android:drawableLeft="@drawable/checkout"
            />

<!--        <ImageButton-->
<!--            android:id="@+id/imgCheckout"-->
<!--            android:layout_width="80dp"-->
<!--            android:layout_height="80dp"-->
<!--            android:backgroundTint="@color/white"-->
<!--            android:padding="0dp"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@id/txtPrice"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            android:layout_marginEnd="-40dp"-->
<!--            app:srcCompat ="@drawable/checkout"-->
<!--            />-->

<!--        <TextView-->
<!--            android:id="@+id/txtCheckout"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/checkout"-->
<!--            android:textStyle="bold"-->
<!--            android:textSize="15dp"-->
<!--            android:textColor="@color/colorPrimary"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/imgCheckout"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->

<!--            android:layout_marginEnd="50dp"-->
<!--            />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>